--- a/public/css/NotificationsCss.css
+++ b/public/css/NotificationsCss.css
@@ -1,3 +1,4 @@
+<style>
 
   /* --- TOAST CONTAINER (Overflow handling) --- */
   #toast-container {
@@ -170,3 +171,5 @@
     font-size: 13px;
     color: #64748b;
   }
+</style>
+
